<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arifian.udacity.reportcard.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_header_student"
            style="@style/header_text"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_student_nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/default_horizontal_margin">
            <EditText
                android:id="@+id/text_student_nim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/input_student_nim" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_student_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/default_horizontal_margin">
            <EditText
                android:id="@+id/text_student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_student_name" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_header_course"
            style="@style/header_text"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_course_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/default_horizontal_margin">
            <EditText
                android:id="@+id/text_course_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_course_code" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/default_horizontal_margin">
            <EditText
                android:id="@+id/text_course_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_course_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_course_sks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/default_horizontal_margin">
            <EditText
                android:id="@+id/text_course_sks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/input_course_sks" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_header_score"
            style="@style/header_text"/>

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/spinner_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_score_score"
            style="@style/default_horizontal_margin"
            app:met_floatingLabel="normal" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            android:onClick="submit"/>

    </LinearLayout>

</ScrollView>
